# sfml-start

./: .gitignore  CMakeLists.txt  README.md
src/: Aircraft.cpp  Aircraft.h  Application.cpp  BloomEffect.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  DataTables.cpp  Entity.cpp  Entity.h  Game.cpp  Game.h  GameOverState.cpp  GameState.cpp  LoadingState.cpp  MenuState.cpp  MusicPlayer.cpp  ParallelTask.cpp  Particle.cpp  ParticleNode.cpp  Pickup.cpp  Player.cpp  Projectile.cpp  ResourceIdentifiers.h  SceneNode.cpp  SettingState.cpp  SoundPlayer.cpp  SpriteNode.cpp  SpriteNode.h  State.cpp  StringHelpers.h  TextNode.cpp  TextureHolder.cpp  TextureHolder.h  TitleState.cpp  Utility.cpp  World.cpp  World.h  drawit.h  (+15 more)
src/ch01_01/: Game.h  circle.cpp  main.cpp  window.cpp
src/ch01_02/: Game.h  StringHelpers.h
src/ch02/: Game.cpp
src/ch03/: Entity.cpp  Game.cpp  ResourceHolder.h  SceneNode.h  World.cpp
src/ch04/: State.cpp  State.h
src/ch04/include/: Category.h  Command.h  ResourceIdentifiers.h
src/ch05/: Application.cpp  Game.cpp  MenuState.cpp  PauseState.cpp
src/ch05/include/: Aircraft.h  LoadingState.h  MenuState.h  Player.h  TitleState.h
src/ch06/: Aircraft.cpp  Button.cpp  Container.cpp  GameState.cpp  Label.cpp  State.cpp  World.cpp
src/ch06/include/: GameState.h  MenuState.h  ResourceIdentifiers.h  StateIdentifiers.h
src/include/: Aircraft.h  Animation.h  Application.h  Button.h  Category.h  Command.h  CommandQueue.h  Component.h  Container.h  EmitterNode.h  Entity.h  Game.h  GameState.h  Particle.h  ParticleNode.h  Pickup.h  Player.h  Projectile.h  ResourceIdentifiers.h  SceneNode.h  SpriteNode.h  State.h  StateIdentifiers.h  StateStack.h  TextNode.h  Utility.h  World.h
src/temp/: Aircraft.cpp  Animation.cpp  Button.cpp  Container.cpp  DataTables.cpp  EmitterNode.cpp  Entity.cpp  Game.cpp  Label.cpp  LoadingState.cpp  MenuState.cpp  ParticleNode.cpp  PauseState.cpp  Pickup.cpp  Projectile.cpp  SceneNode.cpp  SettingState.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  TextNode.cpp  TitleState.cpp  Utility.cpp  World.cpp
src/temp/include/: Aircraft.h  Category.h  CommandQueue.h  Container.h  DataTables.h  Entity.h  Game.h  GameOverState.h  Label.h  ParallelTask.h  PauseState.h  Player.h  SceneNode.h  SettingState.h  State.h  StateStack.h
